--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -8,6 +8,9 @@ jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      IMAGE_TAG: ghcr.io/krishnachaitanya018/${{ github.event.client_payload.service }}:${{ github.event.client_payload.commit }}
+
     steps:
       - name: Checkout orchestration repo
         uses: actions/checkout@v4
@@ -23,13 +26,26 @@ jobs:
           git clone https://github.com/${{ github.event.client_payload.repo }} service-code
           cd service-code
           git checkout ${{ github.event.client_payload.commit }}
+          echo "Cloned and checked out ${{ github.event.client_payload.service }}"
 
       - name: Build Docker image
         run: |
           cd service-code
-          docker build -t ghcr.io/krishnachaitanya018/${{ github.event.client_payload.service }}:${{ github.event.client_payload.commit }} .
+          echo "🏗️ Building Docker image: $IMAGE_TAG"
+          docker build -t $IMAGE_TAG .
 
       - name: Push Docker image
         run: |
           echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u krishnachaitanya018 --password-stdin
-          docker push ghcr.io/krishnachaitanya018/${{ github.event.client_payload.service }}:${{ github.event.client_payload.commit }}
+          echo "Pushing Docker image: $IMAGE_TAG"
+          docker push $IMAGE_TAG
+
+      # Optional deployment step — only needed if you have Kubernetes
+      - name: Deploy to Kubernetes
+        if: ${{ secrets.KUBE_CONFIG != '' }}
+        run: |
+          echo "Deploying ${{ github.event.client_payload.service }} to Kubernetes..."
+          helm upgrade --install ${{ github.event.client_payload.service }} ./helm/${{ github.event.client_payload.service }} \
+            --set image.repository=ghcr.io/krishnachaitanya018/${{ github.event.client_payload.service }} \
+            --set image.tag=${{ github.event.client_payload.commit }} \
+            --kubeconfig "${{ secrets.KUBE_CONFIG }}"
