--- a/helm/user-service/values.yml
+++ b/helm/user-service/values.yml
@@ -1,3 +1,10 @@
+replicaCount: 1
+
 image:
-  repository: ghcr.io/your-org/user-service
-  tag: latest
+  repository: ghcr.io/krishnachaitanya018/user-service
+  tag: "latest"
+  pullPolicy: IfNotPresent
+
+service:
+  type: NodePort
+  port: 8080
