--- a/helm/user-service/templates/deployment.yml
+++ b/helm/user-service/templates/deployment.yml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: {{ .Chart.Name }}
     spec:
+      imagePullSecrets:
+        - name: ghcr-secret
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
