Updated the workflow for docker image and artifact

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,12 +1,12 @@
-name: Build and Deploy Microservice
+name: Build and Store Microservice Image
 
 on:
   repository_dispatch:
     types: [microservice-updated]
 
 jobs:
-  build-deploy:
-    name: Build and Push Docker Image
+  build-and-store:
+    name: Build and Store Docker Image Artifact
     runs-on: self-hosted
     env:
       REGISTRY: ghcr.io/krishnachaitanya018
@@ -22,7 +22,7 @@ jobs:
         run: |
           echo "Triggered by: $REPO_URL"
           echo "Service: $SERVICE_NAME"
-          echo "Commit: $IMAGE_TAG"
+          echo "Commit SHA: $IMAGE_TAG"
 
       - name: Clone microservice repo
         run: |
@@ -36,49 +36,17 @@ jobs:
         run: |
           cd service-code
           echo "Building Docker image..."
-          docker build -t $REGISTRY/$SERVICE_NAME:$IMAGE_TAG .
+          docker build -t $SERVICE_NAME:$IMAGE_TAG .
           docker images | grep $SERVICE_NAME
 
-      - name: Push Docker image to GHCR
+      - name: Save Docker image as artifact
         run: |
-          echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u krishnachaitanya018 --password-stdin
-          echo "Pushing image $REGISTRY/$SERVICE_NAME:$IMAGE_TAG..."
-          docker push $REGISTRY/$SERVICE_NAME:$IMAGE_TAG
+          mkdir -p artifacts
+          docker save -o artifacts/${SERVICE_NAME}_${IMAGE_TAG}.tar $SERVICE_NAME:$IMAGE_TAG
+          ls -lh artifacts/
 
-
-  helm-deploy:
-    name: Helm Deploy to Minikube
-    runs-on: self-hosted
-    needs: build-deploy
-    steps:
-      - name: Check Minikube status
-        run: |
-          echo "🔍 Checking if Minikube is running..."
-          if ! minikube status | grep -q "Running"; then
-            echo "⚠️  Minikube not running. Starting Minikube..."
-            minikube start
-          else
-            echo "✅ Minikube is already running."
-          fi
-          echo "Current context:"
-          kubectl config current-context
-          kubectl get nodes
-
-      - name: Helm Deploy to Minikube
-        run: |
-          echo "🚀 Deploying $SERVICE_NAME to local Minikube cluster..."
-          helm upgrade --install $SERVICE_NAME ./helm/$SERVICE_NAME \
-            --set image.repository=$REGISTRY/$SERVICE_NAME \
-            --set image.tag=$IMAGE_TAG \
-            --wait --timeout 180s
-        env:
-          REGISTRY: ghcr.io/krishnachaitanya018
-          IMAGE_TAG: ${{ github.event.client_payload.commit }}
-          SERVICE_NAME: user-service
-
-      - name: 🔎 Verify Deployment
-        run: |
-          echo "Checking pods and services..."
-          kubectl get pods
-          kubectl get svc
-          echo "Deployment complete for $SERVICE_NAME ✅"
+      - name: Upload image artifact to GitHub
+        uses: actions/upload-artifact@v4
+        with:
+          name: docker-image-${{ env.SERVICE_NAME }}
+          path: artifacts/${{ env.SERVICE_NAME }}_${{ env.IMAGE_TAG }}.tar
