Update the Workflow to display the Repo name

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Store Microservice Image — ${{ github.event.client_payload.service }}
+name: Build and Store Microservice Image
 
 on:
   repository_dispatch:
